Adds skeleton for IntentPickerAutoDisplayService

IntentPickerAutoDisplayService is a KeyedService (including a factory
class) so intent picker UI can locally (i.e. within Chrome) check if
such UI has been displayed before without the user taking action.

The user ignoring the UI should be remembered, so we stop
auto-displaying the UI and instead only show an entry icon in the
omnibox, where the UI will be one-click away.

Bug: 902657
Test: Build.
Change-Id: I2e0333b8c7eba3af78a671a4f119b7c26fcc5283
Reviewed-on: https://chromium-review.googlesource.com/c/1303653
Commit-Queue: David Jacobo <djacobo@chromium.org>
Reviewed-by: Christian Dullweber <dullweber@chromium.org>
Reviewed-by: Raymes Khoury <raymes@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Reviewed-by: calamity <calamity@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606623}
Former-commit-id: 623d492210f53775d50dc67bee193fb1142ae726